# masonwilde.github.io

./: .gitignore  .gitmodules  CNAME  Cargo.toml  hugo.toml  hugo.yml  index.html  index.md  site.json
.github/workflows/: deploy.yaml
_posts/: 2020-10-07-welcome-to-jekyll.markdown
content/: search.md
content/cv/: _index.md  cv.md  general.md  research.md
content/dev_setup_series/: dotfiles.md  macos.md  zsh.md
content/outdoors/: bug-out-bag.md
content/posts/: dev_setup_series.md  welcome.md
content/projects/: dotfiles.md  idle_compute.md  riys-converter.md  wildelab.md
content/recipes/: Chili_Green_Vegan_2023CRSChiliCookoff.md  sourdough.md
content/recipes/sourdough/: _index.md  whole-wheat.md
content/resume/: index.html  index.md
content/tags/: index.md
layouts/: 404.html
layouts/_default/: list.html
layouts/partials/: footer.html  header.html
public/: 404.html  index.html  index.json  index.xml  robots.txt  sitemap.xml
public/categories/: index.html  index.xml
public/dev_setup_series/: index.html  index.xml
public/dev_setup_series/dotfiles/: index.html
public/outdoors/: index.html  index.xml
public/posts/: index.html  index.xml
public/projects/: index.html  index.xml
public/recipes/: index.html  index.xml
public/resume/: index.html
public/search/: index.html
public/tags/: index.html  index.xml
src/: builder.rs  config.rs  content.rs  frontmatter.rs  lib.rs  main.rs
tests/: integration.rs
theme/: README.md  variables.json
theme/templates/: 404.html  base.html  home.html  page.html  resume.html  section.html
(+22 files in other folders)
