[package]
name = "wilde-ssg"
version = "0.1.0"
edition = "2021"

[dependencies]
pulldown-cmark = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "html", "parsing", "regex-fancy"] }
tera = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
